# haretropanel

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  babel.config.json  docker-compose.yml  package-lock.json  package.json
.github/workflows/: docker-image.yml  release.yml  tests.yml
.serena/: project.yml
docs/: adr-001-js-extraction.md
public/js/: dashboard.js
src/: bootstrap.rs  lib.rs  main.rs
src/application/: mod.rs
src/application/ports/: ha_client_port.rs  mod.rs
src/application/services/: dashboard_service.rs  mod.rs
src/config/: app_config.rs  mod.rs
src/domain/: entities.rs  mod.rs  value_objects.rs
src/infrastructure/: mod.rs
src/infrastructure/ha/: demo_ha_client.rs  ha_http_client.rs  ha_models.rs  mod.rs
src/infrastructure/layout/: fs_dashboard_layout_repository.rs  mod.rs
src/infrastructure/web/: mod.rs  routes.rs  viewhelpers.rs  viewmodels.rs
src/infrastructure/web/handlers/: dashboard_handler.rs  mod.rs  settings_handler.rs  solar_api.rs  websocket_handler.rs
src/js/: dashboard.js
src/shared/: error.rs  mod.rs
templates/: base.html  dashboard.html  entities_settings  entities_settings.html
tests/: dashboard_integration.rs
